tests/NormalTests/paczka1/fuzzy1/13226254.err
Error in line 13: A673 A673 10,1
Error in line 24: FqnP2MFiBO S24 33,9
Error in line 30: psxXUp7oNa S24 46,2
